--- a/Memory-Memo-App-Project/Memory-Memo-App-Project/Base.lproj/Main.storyboard
+++ b/Memory-Memo-App-Project/Memory-Memo-App-Project/Base.lproj/Main.storyboard
@@ -19,11 +19,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" rowHeight="100" id="X76-Cp-LS2">
-                                <rect key="frame" x="0.0" y="28" width="414" height="100"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" rowHeight="70" id="X76-Cp-LS2">
+                                <rect key="frame" x="0.0" y="28" width="414" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="X76-Cp-LS2" id="ZO7-QH-Zlt">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="99.666666666666671"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="69.666666666666671"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -73,7 +73,7 @@
                                 <state key="normal" title="답 보기"/>
                                 <connections>
                                     <action selector="didTabButton:" destination="dQf-4e-tKe" eventType="touchUpInside" id="sg8-Up-00l"/>
-                                    <segue destination="ibo-AJ-7gd" kind="show" id="Abq-IO-y9a"/>
+                                    <segue destination="ibo-AJ-7gd" kind="show" identifier="sgAnswerDetail" id="Abq-IO-y9a"/>
                                 </connections>
                             </button>
                         </subviews>
